Feat/71 Record로 형식 변경 및 멘토님 피드백 반영 (#81)
* feat/71 (작가용 대시보드)rombok->record형식으로 수정

* feat/71 (고객용 대시보드)rombok->record형식으로 수정

* feat/71 controller에서 파라미터 request dto 식으로 나누기

* feat/71 (작가용 대시보드)controller에서 파라미터 request dto 식으로 나누기

* feat/71 (작가용 대시보드)controller에서 파라미터 request dto 식으로 나누기

* feat/71 controller 중복 로직 통일

* feat/71 글로벌 exception 수정

* feat/71 글로벌 exception 수정