@@ -13,7 +13,7 @@ import static org.junit.jupiter.api.Assertions.assertAll;
 /**
  * ArtistDashboardServiceImpl 테스트
  * 비즈니스 로직과 데이터 일관성에 집중
- * 2025.09.23
+ * 2025.09.25 수정
  */
 @ExtendWith(MockitoExtension.class)
 @DisplayName("작가 대시보드 서비스 구현체 테스트")
@@ -34,15 +34,15 @@ class ArtistDashboardServiceImplTest {
         // Then - 핵심 구조와 비즈니스 로직 검증
         assertAll(
                 () -> assertThat(result).isNotNull(),
-                () -> assertThat(result.getProfile()).isNotNull(),
-                () -> assertThat(result.getStats()).isNotNull(),
-                () -> assertThat(result.getTrends()).isNotNull(),
-                () -> assertThat(result.getNotifications()).isNotNull(),
+                () -> assertThat(result.profile()).isNotNull(),
+                () -> assertThat(result.stats()).isNotNull(),
+                () -> assertThat(result.trends()).isNotNull(),
+                () -> assertThat(result.notifications()).isNotNull(),
                 // 비즈니스 규칙 검증
-                () -> assertThat(result.getStats().getTotalSales()).isNotNegative(),
-                () -> assertThat(result.getStats().getAverageRating()).isBetween(0.0, 5.0),
-                () -> assertThat(result.getTrends().getSeries().getSales().getPoints()).isNotEmpty(),
-                () -> assertThat(result.getServerTime()).isNotNull()
+                () -> assertThat(result.stats().totalSales()).isNotNegative(),
+                () -> assertThat(result.stats().averageRating()).isBetween(0.0, 5.0),
+                () -> assertThat(result.trends().series().sales().points()).isNotEmpty(),
+                () -> assertThat(result.serverTime()).isNotNull()
         );
     }
 
@@ -61,8 +61,8 @@ class ArtistDashboardServiceImplTest {
                 () -> assertThat(result.getTotalPages()).isEqualTo(1),
                 () -> assertThat(result.isHasNext()).isFalse(),
                 () -> assertThat(result.isHasPrevious()).isFalse(),
-                () -> assertThat(result.getContent().get(0).getPrice()).isNotNegative(),
-                () -> assertThat(result.getContent().get(0).getSellingStatus()).isEqualTo("SELLING")
+                () -> assertThat(result.getContent().getFirst().price()).isNotNegative(),
+                () -> assertThat(result.getContent().getFirst().sellingStatus()).isEqualTo("SELLING")
         );
     }
 
@@ -75,12 +75,12 @@ class ArtistDashboardServiceImplTest {
         // Then - 비즈니스 규칙 검증
         assertAll(
                 () -> assertThat(result).isNotNull(),
-                () -> assertThat(result.getCurrentBalance()).isEqualTo(72000),
-                () -> assertThat(result.getCurrency()).isEqualTo("KRW"),
+                () -> assertThat(result.currentBalance()).isEqualTo(72000),
+                () -> assertThat(result.currency()).isEqualTo("KRW"),
                 // 핵심 비즈니스 규칙 - 환전 가능 금액은 현재 잔액 이하
-                () -> assertThat(result.getWithdrawable()).isLessThanOrEqualTo(result.getCurrentBalance()),
-                () -> assertThat(result.getCurrentBalance()).isNotNegative(),
-                () -> assertThat(result.getUpdatedAt()).isNotNull()
+                () -> assertThat(result.withdrawable()).isLessThanOrEqualTo(result.currentBalance()),
+                () -> assertThat(result.currentBalance()).isNotNegative(),
+                () -> assertThat(result.updatedAt()).isNotNull()
         );
     }
 
@@ -94,13 +94,13 @@ class ArtistDashboardServiceImplTest {
         // Then - 거래 데이터와 통계 일관성 검증
         assertAll(
                 () -> assertThat(result).isNotNull(),
-                () -> assertThat(result.getSummary()).isNotNull(),
-                () -> assertThat(result.getContent()).hasSize(2),
+                () -> assertThat(result.summary()).isNotNull(),
+                () -> assertThat(result.content()).hasSize(2),
                 // 핵심 비즈니스 규칙 - 순 증감은 입금 - 환전
-                () -> assertThat(result.getSummary().getPeriodNet()).isEqualTo(
-                        result.getSummary().getPeriodDepositTotal() - result.getSummary().getPeriodWithdrawalTotal()),
-                () -> assertThat(result.getContent().get(0).getBalanceAfter()).isNotNegative(),
-                () -> assertThat(result.getTotalElements()).isEqualTo(2)
+                () -> assertThat(result.summary().periodNet()).isEqualTo(
+                        result.summary().periodDepositTotal() - result.summary().periodWithdrawalTotal()),
+                () -> assertThat(result.content().getFirst().balanceAfter()).isNotNegative(),
+                () -> assertThat(result.totalElements()).isEqualTo(2)
         );
     }
 
@@ -114,12 +114,12 @@ class ArtistDashboardServiceImplTest {
         // Then - 주문 통계와 목록 일관성 검증
         assertAll(
                 () -> assertThat(result).isNotNull(),
-                () -> assertThat(result.getSummary()).isNotNull(),
-                () -> assertThat(result.getContent()).hasSize(1),
-                () -> assertThat(result.getSummary().getTotal()).isEqualTo(156),
-                () -> assertThat(result.getSummary().getPending()).isNotNegative(),
-                () -> assertThat(result.getContent().get(0).getTotalAmount()).isPositive(),
-                () -> assertThat(result.getTotalElements()).isEqualTo(156)
+                () -> assertThat(result.summary()).isNotNull(),
+                () -> assertThat(result.content()).hasSize(1),
+                () -> assertThat(result.summary().total()).isEqualTo(156),
+                () -> assertThat(result.summary().pending()).isNotNegative(),
+                () -> assertThat(result.content().getFirst().totalAmount()).isPositive(),
+                () -> assertThat(result.totalElements()).isEqualTo(156)
         );
     }
 
@@ -133,14 +133,14 @@ class ArtistDashboardServiceImplTest {
         // Then - 취소 요청 통계와 목록 일관성 검증
         assertAll(
                 () -> assertThat(result).isNotNull(),
-                () -> assertThat(result.getSummary()).isNotNull(),
-                () -> assertThat(result.getContent()).hasSize(1),
-                () -> assertThat(result.getBulkActions()).hasSize(2),
+                () -> assertThat(result.summary()).isNotNull(),
+                () -> assertThat(result.content()).hasSize(1),
+                () -> assertThat(result.bulkActions()).hasSize(2),
                 // 핵심 비즈니스 규칙 - 상태별 합계가 전체와 일치
-                () -> assertThat(result.getSummary().getPending() + result.getSummary().getApproved()
-                        + result.getSummary().getRejected()).isEqualTo(result.getSummary().getTotal()),
-                () -> assertThat(result.getContent().get(0).getRefundAmount()).isPositive(),
-                () -> assertThat(result.getTotalElements()).isEqualTo(8)
+                () -> assertThat(result.summary().pending() + result.summary().approved()
+                        + result.summary().rejected()).isEqualTo(result.summary().total()),
+                () -> assertThat(result.content().getFirst().refundAmount()).isPositive(),
+                () -> assertThat(result.totalElements()).isEqualTo(8)
         );
     }
 
@@ -154,14 +154,14 @@ class ArtistDashboardServiceImplTest {
         // Then - 교환 요청 통계와 목록 일관성 검증
         assertAll(
                 () -> assertThat(result).isNotNull(),
-                () -> assertThat(result.getSummary()).isNotNull(),
-                () -> assertThat(result.getContent()).hasSize(1),
-                () -> assertThat(result.getBulkActions()).hasSize(2),
+                () -> assertThat(result.summary()).isNotNull(),
+                () -> assertThat(result.content()).hasSize(1),
+                () -> assertThat(result.bulkActions()).hasSize(2),
                 // 핵심 비즈니스 규칙 - 상태별 합계가 전체와 일치
-                () -> assertThat(result.getSummary().getPending() + result.getSummary().getApproved()
-                        + result.getSummary().getRejected()).isEqualTo(result.getSummary().getTotal()),
-                () -> assertThat(result.getContent().get(0).getOrderItem().getPrice()).isPositive(),
-                () -> assertThat(result.getTotalElements()).isEqualTo(5)
+                () -> assertThat(result.summary().pending() + result.summary().approved()
+                        + result.summary().rejected()).isEqualTo(result.summary().total()),
+                () -> assertThat(result.content().getFirst().orderItem().price()).isPositive(),
+                () -> assertThat(result.totalElements()).isEqualTo(5)
         );
     }
 
@@ -174,31 +174,31 @@ class ArtistDashboardServiceImplTest {
         // Then - 설정 정보 구조와 데이터 검증
         assertAll(
                 () -> assertThat(result).isNotNull(),
-                () -> assertThat(result.getProfile()).isNotNull(),
-                () -> assertThat(result.getBusiness()).isNotNull(),
-                () -> assertThat(result.getPayout()).isNotNull(),
-                () -> assertThat(result.getPermissions()).isNotNull(),
+                () -> assertThat(result.profile()).isNotNull(),
+                () -> assertThat(result.business()).isNotNull(),
+                () -> assertThat(result.payout()).isNotNull(),
+                () -> assertThat(result.permissions()).isNotNull(),
                 // 프로필 정보 검증
-                () -> assertThat(result.getProfile().getNickname()).isEqualTo("작가명입니다"),
-                () -> assertThat(result.getProfile().getBio()).isNotEmpty(),
-                () -> assertThat(result.getProfile().getSns()).hasSize(1),
-                () -> assertThat(result.getProfile().getSns().get(0).getPlatform()).isEqualTo("Instagram"),
-                () -> assertThat(result.getProfile().getProfileImageUrl()).isNotEmpty(),
+                () -> assertThat(result.profile().nickname()).isEqualTo("작가명입니다"),
+                () -> assertThat(result.profile().bio()).isNotEmpty(),
+                () -> assertThat(result.profile().sns()).hasSize(1),
+                () -> assertThat(result.profile().sns().getFirst().platform()).isEqualTo("Instagram"),
+                () -> assertThat(result.profile().profileImageUrl()).isNotEmpty(),
                 // 사업자 정보 검증
-                () -> assertThat(result.getBusiness().getAddress()).isNotEmpty(),
-                () -> assertThat(result.getBusiness().getBusinessRegistrationNo()).isEqualTo("123-45-67890"),
-                () -> assertThat(result.getBusiness().getTelemarketingReportNo()).isNotEmpty(),
-                () -> assertThat(result.getBusiness().isVerified()).isTrue(),
+                () -> assertThat(result.business().address()).isNotEmpty(),
+                () -> assertThat(result.business().businessRegistrationNo()).isEqualTo("123-45-67890"),
+                () -> assertThat(result.business().telemarketingReportNo()).isNotEmpty(),
+                () -> assertThat(result.business().verified()).isTrue(),
                 // 정산 계좌 정보 검증
-                () -> assertThat(result.getPayout().getBankCode()).isEqualTo("088"),
-                () -> assertThat(result.getPayout().getBankName()).isEqualTo("신한"),
-                () -> assertThat(result.getPayout().getAccountHolder()).isEqualTo("홍길동"),
-                () -> assertThat(result.getPayout().getAccountMasked()).contains("****"),
-                () -> assertThat(result.getPayout().getStatus()).isEqualTo("VERIFIED"),
+                () -> assertThat(result.payout().bankCode()).isEqualTo("088"),
+                () -> assertThat(result.payout().bankName()).isEqualTo("신한"),
+                () -> assertThat(result.payout().accountHolder()).isEqualTo("홍길동"),
+                () -> assertThat(result.payout().accountMasked()).contains("****"),
+                () -> assertThat(result.payout().status()).isEqualTo("VERIFIED"),
                 // 권한 정보 검증
-                () -> assertThat(result.getPermissions().isCanEditProfile()).isTrue(),
-                () -> assertThat(result.getPermissions().isCanEditBusiness()).isTrue(),
-                () -> assertThat(result.getPermissions().isCanEditPayout()).isTrue()
+                () -> assertThat(result.permissions().canEditProfile()).isTrue(),
+                () -> assertThat(result.permissions().canEditBusiness()).isTrue(),
+                () -> assertThat(result.permissions().canEditPayout()).isTrue()
         );
     }
 
@@ -216,18 +216,18 @@ class ArtistDashboardServiceImplTest {
                 () -> assertThat(result.getContent()).isNotEmpty(),
                 () -> assertThat(result.getBulkActions()).isNotEmpty(),
                 // 요약 정보 검증
-                () -> assertThat(result.getSummary().getTotalFundings()).isEqualTo(15),
-                () -> assertThat(result.getSummary().getActiveFundings()).isEqualTo(8),
-                () -> assertThat(result.getSummary().getCompletedFundings()).isEqualTo(6),
-                () -> assertThat(result.getSummary().getCancelledFundings()).isEqualTo(1),
+                () -> assertThat(result.getSummary().totalFundings()).isEqualTo(15),
+                () -> assertThat(result.getSummary().activeFundings()).isEqualTo(8),
+                () -> assertThat(result.getSummary().completedFundings()).isEqualTo(6),
+                () -> assertThat(result.getSummary().cancelledFundings()).isEqualTo(1),
                 // 비즈니스 규칙 검증 - 달성률과 목표달성 플래그 일관성
-                () -> assertThat(result.getContent().get(0).getAchievementRate()).isEqualTo(100),
-                () -> assertThat(result.getContent().get(0).getFlags().isGoalAchieved()).isTrue(),
-                () -> assertThat(result.getContent().get(1).getAchievementRate()).isEqualTo(1500),
-                () -> assertThat(result.getContent().get(1).getFlags().isGoalAchieved()).isTrue(),
+                () -> assertThat(result.getContent().getFirst().achievementRate()).isEqualTo(100),
+                () -> assertThat(result.getContent().getFirst().flags().goalAchieved()).isTrue(),
+                () -> assertThat(result.getContent().get(1).achievementRate()).isEqualTo(1500),
+                () -> assertThat(result.getContent().get(1).flags().goalAchieved()).isTrue(),
                 // 권한 로직 검증
-                () -> assertThat(result.getContent().get(0).getPermissions().isCanRequestSale()).isTrue(),
-                () -> assertThat(result.getContent().get(1).getPermissions().isCanRequestSale()).isTrue(),
+                () -> assertThat(result.getContent().getFirst().permissions().canRequestSale()).isTrue(),
+                () -> assertThat(result.getContent().get(1).permissions().canRequestSale()).isTrue(),
                 // 페이징 검증
                 () -> assertThat(result.getTotalElements()).isEqualTo(15),
                 () -> assertThat(result.getTotalPages()).isEqualTo(1),
